[package]
name = "coz"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
repository = "https://github.com/alexcrichton/coz-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Rust support for the `coz` Causal Profiler: https://github.com/plasma-umass/coz
"""

[dependencies]
libc = "0.2"
once_cell = "1.1"
